== 0.1.1

* Features

  * Added tag_name_suggested constraint type.

* Bugfixes

  * Not required tag_names now work in any depth level, no longer at last level only.

== 0.1.0
  * Added support for (possible) "content_values" on Bliss::Format.

== 0.0.9

* Features

  * Added on_timeout callback.
  * Introduced Bliss::Format, which linked to a Bliss::Parser are checked during parsing process. They are defined with a bunch of specs given as YAML.
  * added support for Gzip (content type is autodetected).
  * on_max_unhandled_bytes callback block. Which receives the amount of bytes and a block to execute when that limit is reached.
  * on_tag_close maybe used without a specific tag name, and block now handles "current depth" array.
  * Featuring changelog.

* Bugfixes

  * When XML is too small, it ended through http.callback block, and did not closed the file. That lead to errors and is fixed in this version.